--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: {devNotes}
+title: devNotes
 description: A learners jurney to master the craft of codeing...
 github_username: paragppanchal
 # you can comment the below line out if your repo name is not different than your baseurl
