--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: devNotes
-description: A learners jurney to master the craft of codeing...
+description: My jurney to master the craft of codeing...
 github_username: paragppanchal
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "devnotes"
